2011-05-16  Huzaifa Sidhpurwala <huzaifas@redhat.com>

       Reviewed by Adam Barth.

       Add Huzaifa Sidhpurwala to the WebKit Security Group site.
       https://bugs.webkit.org/show_bug.cgi?id=60686

       * security/security-group-members.html:

2011-05-11  Cris Neckar  <cdn@chromium.org>

        Reviewed by David Levin.

        Adding Cris Neckar to the Webkit Security Group site.
        https://bugs.webkit.org/show_bug.cgi?id=60668

        * security/security-group-members.html:

2011-05-11  Ademar de Souza Reis Jr.  <ademar.reis@openbossa.org>

        Reviewed by Mark Rowe.

        Update Qt/Nokia Security contacts
        https://bugs.webkit.org/show_bug.cgi?id=60650

        Ademar (me) replaced Simon as the release manager and primary security
        contact for QtWebKit. See:
        http://lists.webkit.org/mailman/private.cgi/webkit-security/2011-February/000584.html

        * security/security-group-members.html:

2011-05-09  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        Add guidelines for feature addition to webkit.org (per disccusion at contributor meeting)
        https://bugs.webkit.org/show_bug.cgi?id=59672

        * coding/adding-features.html: Added.
        * nav.inc:

2011-04-29  Pavel Feldman  <pfeldman@chromium.org>

        Not reviewed: adding image files for the blog post.

        * blog-files/inspector/remote-debugging-attached.png: Added.
        * blog-files/inspector/remote-debugging-discovery.png: Added.

2011-04-27  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Dan Bernstein.

        change style guide to pre-increment in for-loops
        https://bugs.webkit.org/show_bug.cgi?id=59619

        This matches what a number of reviewers have been asking
        for in code reviews.

        * coding/coding-style.html:

2011-04-26  Carol Szabo  <carol.szabo@nokia.com>

        Reviewed by Tor Arne Vestbø.

        Added instructions on how to work from behind proxy