@@ -7,11 +7,7 @@ include("../header.inc");
 <h4>Mac OS X</h4>
 <ol>
 <li><p>Install the Xcode Tools package</p>
-<p>Install the Xcode Tools package from <a target="installtools" href="http://connect.apple.com/">http://connect.apple.com</a>.  Xcode 2.3 or later is required to build.</p>
-<li><p>Install a Subversion Client (Tiger only)</p>
-<p>Subversion (svn) is the source code management tool used by the WebKit Open Source Project. A <a target="installtools" href="http://www.collab.net/downloads/community/">Subversion client for Mac OS X 10.4 and later</a> is available.  Leopard (10.5) and later already include a subversion client.</p>
-<li><p>Install Python 2.5 or later (Tiger only)</p>
-<p>Python is a scripting language used by the WebKit Open Source Project. WebKit scripts require <a target="installtools" href="http://www.python.org/download/">Python 2.5 or later</a> to run.  Tiger includes Python 2.3 which is too old to support  <a target="installtools" href="http://trac.webkit.org/wiki/PythonGuidelines">WebKit's Python scripts</a>.</p>
+<p>Install the Xcode Tools package from <a target="installtools" href="http://connect.apple.com/">http://connect.apple.com</a>.  Xcode 3.1.4 or later is required to build.</p>
 <li><p>Install Java for Mac OS X Developer Package</p>
 <p>Download and install the latest OS-appropriate "Java for Mac OS X Developer Package" from <a href="http://connect.apple.com/">http://connect.apple.com/</a> (located under Downloads > Java).</p>
 </ol>
